<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_view_layout"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <!-- ImageVIew to display our Course Image -->


        <ImageView
            android:id="@+id/androidImg"
            android:layout_width="87dp"
            android:layout_height="148dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="@+id/summit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.794"
            app:layout_constraintStart_toEndOf="@+id/content"
            app:layout_constraintTop_toTopOf="@+id/name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/names"
            android:layout_width="292dp"
            android:layout_height="35dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="32dp"
            android:text="LocationNameIsNextPage"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="242dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/content"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/names" />

        <EditText
            android:id="@+id/content"
            android:layout_width="237dp"
            android:layout_height="43dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/content"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <Button
            android:id="@+id/summit"
            android:layout_width="180dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/summit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/content"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>